<resources>

    <string name="app_name" translatable="false">FacePet</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="lbl_login">Login</string>

    <string name="message_hint_email">Enter your Email</string>
    <string name="btn_txt_ingresar">Enter</string>
    <string name="show_password">Show Password</string>
    <string name="message_hint_show_pass">Enter your Password</string>
    <string name="txt_not_account">Not have an account?</string>
    <string name="txt_register">Sign up</string>

    <string name="txt_reg_email" translatable="false">Email</string>
    <string name="txt_reg_nombre">Name</string>
    <string name="txt_reg_password">Password</string>
    <string name="btn_reg_Registrar">SUBMIT</string>
    <string name="txt_reg_facebook" translatable="false">FACEBOOK</string>
    <string name="txt_reg_google" translatable="false">GOOGLE</string>
    <string name="txt_reg_phone">Phone Number</string>
    <string name="txt_reg_address">Adress</string>
    <string name="txt_reg_apellido">Last Name</string>
    <string name="city_id">City Id</string>

    <string name="txt_Reservarturno">Reserve shift</string>
    <string name="txt_seleccionfecha">Select the date</string>
    <string name="elija_su_mascota">Choose your pet</string>
    <string name="cantidad_mascota">Quantity</string>
    <string name="servicio_mascota">Service</string>
    <string name="confirmar_reserva">Confirm</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="empresaslist">Business</string>

</resources>
