<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.reservations.Register.RegisterReservationsActivity">


    <TextView
        android:id="@+id/txttituloreserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Reservarturno"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/margin_16dp"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <!--El Scroll siempre debe contener un LinearLayout o RelativeLayout-->
    <ScrollView
        android:id="@+id/register-form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txttituloreserva">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_seleccionfecha"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"/>

        <EditText
        android:id="@+id/edtFechaReserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:inputType="datetime" />

        <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elija_su_mascota"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"/>

        <Spinner
        android:id="@+id/spnMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:entries="@array/mascotas"
        android:textColor="@color/colorPrimary" />

        <TextView
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantidad_mascota"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"/>

        <Spinner
        android:id="@+id/spnCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:entries="@array/cantidadMascotas"
        android:textColor="@color/colorPrimary" />


        <TextView
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/servicio_mascota"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spnServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:entries="@array/servicio"
        android:textColor="@color/colorPrimary" />
     <TextView
         android:id="@+id/txt5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empresaslist"
         android:textColor="@color/colorPrimary"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginLeft="@dimen/margin_8dp"
         android:layout_marginRight="@dimen/margin_8dp"
         android:textSize="@dimen/text_size_16"
         android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spnEmpresas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:textColor="@color/colorPrimary" />

        <Button
        android:id="@+id/btnConfirmarReserva"
        style="@style/btn_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_reserva"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"

        />

        </LinearLayout>
    </ScrollView>


    <include  android:id="@+id/progress_dialogReservation" layout="@layout/progress_dialog"/>
</LinearLayout>